[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/destructables/destructable_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/models/broken_window_matrix/window_broken_matrix.gltf" type="PackedScene" id=2]
[ext_resource path="res://assets/models/zombie_animations_frank_ilikethepixies/zombie_animations_frank_ilikethepixies.gltf" type="PackedScene" id=3]
[ext_resource path="res://scenes/destructables/window.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/sfx_window_break_hi_jdymusic.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/sfx_window_break_med_jdymusic.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/sfx_window_break_lo_jdymusic.mp3" type="AudioStream" id=7]

[sub_resource type="BoxShape" id=12]
extents = Vector3( 1, 2, 0.2 )

[sub_resource type="Shader" id=9]
code = "shader_type spatial;

render_mode unshaded, shadows_disabled, depth_test_disable;

uniform vec4 background_color : hint_color = vec4(.0, .0, .0, 1.);
uniform vec4 progress_color : hint_color = vec4(.0, 1., .0, 1.);
uniform float progress_value : hint_range(0.0, 1.0, 0.02) = .5;

void vertex()
{
	MODELVIEW_MATRIX = INV_CAMERA_MATRIX * mat4(CAMERA_MATRIX[0],CAMERA_MATRIX[1],CAMERA_MATRIX[2],WORLD_MATRIX[3]);
}

void fragment()
{
	vec2 border = vec2(0.01, 0.1);

	vec2 mask2 = step(border, UV) * step(UV, 1.0-border);
    float mask = mask2.x*mask2.y;

	//float progress = .5;
    float blend = ((UV.x - progress_value) <= 0.0 ? 1.0 : 0.0) * mask;
    vec4 fragColor = progress_color*blend + background_color*(1.0-blend);
	ALBEDO = fragColor.rgb;

}"

[sub_resource type="ShaderMaterial" id=13]
render_priority = 5
shader = SubResource( 9 )
shader_param/background_color = Color( 0, 0, 0, 1 )
shader_param/progress_color = Color( 0, 1, 0, 1 )
shader_param/progress_value = 1.0

[sub_resource type="QuadMesh" id=11]
resource_local_to_scene = true
material = SubResource( 13 )
size = Vector2( 1, 0.1 )

[node name="Window" instance=ExtResource( 1 )]
script = ExtResource( 4 )
starting_health = 20

[node name="CollisionShape" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 12 )

[node name="OutlineHelper3D" parent="." index="1"]
mesh_instances_to_outline = [ NodePath("../window_broken_matrix/window"), NodePath("../window_broken_matrix/glass") ]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="DamagedRandomAudioStreamPlayer3D" index="0"]
stream = ExtResource( 5 )
unit_db = 12.0
bus = "SoundFx"

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="DamagedRandomAudioStreamPlayer3D" index="1"]
stream = ExtResource( 7 )
unit_db = 12.0
bus = "SoundFx"

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="DamagedRandomAudioStreamPlayer3D" index="2"]
stream = ExtResource( 6 )
unit_db = 12.0
bus = "SoundFx"

[node name="HealthBar" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.81475, 0 )
mesh = SubResource( 11 )

[node name="window_broken_matrix" parent="." index="6" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.653, 0 )

[node name="zombie_animations_frank_ilikethepixies" parent="." index="7" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 4.71637 )
visible = false

[node name="ZombieTeleportPosition3D" type="Position3D" parent="." index="8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.89336, 0, -3.57724 )

[node name="CheckWindowClimberQueueTimer" type="Timer" parent="." index="9"]
autostart = true

[connection signal="timeout" from="CheckWindowClimberQueueTimer" to="." method="_on_CheckWindowClimberQueueTimer_timeout"]

[editable path="window_broken_matrix"]
[editable path="zombie_animations_frank_ilikethepixies"]
